# Asterbin-XMatcher

./: .gitignore  LICENSE  README.md  XMatcher_Guide.html  XMatcher_Jupyter_API_Guide_CN_EN.ipynb  XMatcher_Local_UI.html  build_database_parallel.py  pyproject.toml  requirements-dev.txt  requirements.txt  xmatcher_local_api.py
.github/workflows/: build-desktop.yml  deploy-guide.yml
XMatcher/: __init__.py  build_database.py  database.py  db_processor.py  matcher.py  multiphase_matcher.py  peak_detector.py  retriever.py  xrd_calculator.py  xrd_reader.py
desktop/: README.md  build_desktop.py  package_artifacts.py  prepare_database.py  requirements-desktop.txt  xmatcher_desktop.py
docs/readme/: README.ja.md  README.ko.md  README.zh-CN.md
tests/: test_local_api.py  test_matcher.py  test_multiphase_matcher.py  test_reader_and_peaks.py
