[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XMatcher"
version = "0.2.0"
description = "Industrial XRD phase matching and crystal structure retrieval toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Bin Cao", email = "bcao686@connect.hkust-gz.edu.cn" }
]
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "pandas>=1.3.0",
  "ase>=3.22.0",
  "pymatgen>=2022.0.0",
  "tqdm>=4.62.0",
]
keywords = ["xrd", "diffraction", "materials-science", "phase-identification"]

[project.optional-dependencies]
viz = ["matplotlib>=3.4.0"]
dev = ["pytest>=7.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Bin-Cao/XMatcher"
Repository = "https://github.com/Bin-Cao/XMatcher"

[tool.setuptools]
packages = ["XMatcher"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
